<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ambient Alarm Clock</string><!-- "clock"-->
    <string name="app_name_short">AAC</string>
    <string name="alarm">Alarm</string><!-- "clock"-->
    <string name="coverter">Converter</string><!-- "clock"-->
    <string name="shophours">Shop Hours</string>
    <string name="snooze">5 more minutes mom!</string><!-- "five more minutes mom" -->
    <string name="awake">OK. I am up!</string><!-- "ok I'm awake"-->
    <string name="save">Save</string><!-- the word for "save" or "store"-->
    <string name="radio">Radio</string><!-- the word for "radio"-->
    <string name="sound">Sound</string>
    <string name="converter">Time Converter</string>
	<string name="hoursystem">28 Hour Display</string><!-- the words for "28 hour system, providined in the settings to chose between 28 hour system and am/pm system"-->
	<string name="sleepduration">Sleep duration</string><!--  Word for Sleep duration -->
	<string name="settings">Settings</string><!-- Settings -->
	<string name="playonwakeup">Play radio on wake-up</string> <!-- Play Radio on Wake Up -->
	<string name="choosestation">Choose station</string><!-- Choose Station -->
	<string name="setalarmtime">Set alarm time</string>
	<string name="useownring">Use Own Song</string>
	<string name="soundsettings">Set alarm sound</string>
	<string name="snoozetime">Snooze Time</string>
	<string name="activated">Activated</string>
	<string name="syncdayselect">Sync day selection</string>
	<string name="time">Time</string>
	<string name="hour">Hour</string>
	<string name="minute">Minute</string>
	<string name="min">Min</string>
	<string name="sec">Sec</string>
	<string name="twentyfoursys">24 hour time</string>
	<string name="twentyeightsyssys">28 hour time</string>
	<string name="fadein">Fade In</string>
    <string name="day1">Syncday</string><!-- "Monday"-->
    <string name="day2">Fourday</string><!-- "Monday"-->
    <string name="day3">October</string><!-- "Monday"-->
    <string name="day4">Duodeciday</string><!-- "Monday"-->
    <string name="day5">Hexday</string><!-- "Monday"-->
    <string name="day6">Saturday</string><!-- "Monday"-->
    <string name="day7">Sunday</string><!-- "Monday"-->
    <string name="choosefolder">Choose a Folder</string>
    <string name="chooselocalfolder">Choose a Folder</string>
</resources>